multicontainer-kustomize/base/famous-quotes.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: famous-quotes
      app.kubernetes.io/component: famous-quotes
      app.kubernetes.io/instance: famous-quotes
    name: famous-quotes
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: quay.io/redhattraining/famous-quotes:2.1
      from:
        kind: DockerImage
        name: quay.io/redhattraining/famous-quotes:2.1
      generation: null
      importPolicy: {}
      name: "2.1"
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"famous-quotes:2.1"},"fieldPath":"spec.template.spec.containers[?(@.name==\"famous-quotes\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: famous-quotes
      app.kubernetes.io/component: famous-quotes
      app.kubernetes.io/instance: famous-quotes
    name: famous-quotes
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: famous-quotes
    strategy: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: famous-quotes
      spec:
        containers:
        - env:
          - name: QUOTES_DATABASE
            value: quotesdb
          - name: QUOTES_HOSTNAME
            value: mariadb
          - name: QUOTES_PASSWORD
            value: redhat123
          - name: QUOTES_USER
            value: quotes
          image: ' '
          name: famous-quotes
          ports:
          - containerPort: 8000
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: famous-quotes
      app.kubernetes.io/component: famous-quotes
      app.kubernetes.io/instance: famous-quotes
    name: famous-quotes
  spec:
    ports:
    - name: 8000-tcp
      port: 8000
      protocol: TCP
      targetPort: 8000
    selector:
      deployment: famous-quotes
  status:
    loadBalancer: {}
kind: List
metadata: {}
